# wefo

./: .gitignore  Cargo.toml  README.md
src/: configure.rs  logger.rs  main.rs  utils.rs
src/fc/: base.rs  mod.rs  openweathermap.rs
